# r3d_bvh

./: README.md
cmake/: UseDoxygen.cmake
docs/: bvh_nml.txt  configFiles.txt  options.txt  threads_1.ods  threads_2.ods
include/libaux/: image.h  (+8 more)
src/: CMakeLists.txt  CMakeLists.txt~
src/bvhc/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  main.cpp
src/libaux/: CMakeLists.txt  CMakeLists.txt~  image.cpp  indexer.cpp  mathaux.cpp  nmlparser.cpp  params.cpp  path.cpp  pkt.cpp  utils.cpp
src/libbvh/: CMakeLists.txt  CMakeLists.txt~  bvh.cpp  bvhaabb.cpp  bvhbidi.cpp  bvhcamera.cpp  bvhcolor.cpp  bvhconfig.cpp  bvhgpu.cpp  bvhlight.cpp  bvhmesh.cpp  bvhnode.cpp  bvhnodebinary.cpp  bvhpath.cpp  bvhprimitive.cpp  bvhscene.cpp  bvhshader.cpp  bvhtexture.cpp  bvhtransform.cpp
src/libbvhcuda/: CMakeLists.txt  CMakeLists.txt~  bvhcuda.cu  bvhcuda.cu~  bvhgpu_1.cu  bvhgpu_2.cu  bvhgpu_3.cu  bvhgpu_4.cu  bvhgpu_5.cu  bvhgpu_5.cu~
src/render-o-matic/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~
src/shaders/: camera_rect.cpp  camera_rect.cpp~  camera_sph.cpp  camera_sph.cpp~  emitter_cylinder.cpp  emitter_cylinder.cpp~  emitter_semisphere.cpp  emitter_semisphere.cpp~  emitter_sphere.cpp  emitter_sphere.cpp~  emitter_square.cpp  emitter_square.cpp~  jitter2d_crand.cpp  jitter2d_crand.cpp~  jitter2d_creg.cpp  jitter2d_sqrand.cpp  jitter2d_sqreg.cpp  jitter_sqreg.cpp~  light_omni.cpp  light_omni.cpp~  surface_constant.cpp  surface_constant.cpp~  surface_glass.cpp  surface_glassfresnel.cpp  surface_gourand.cpp  surface_gourand.cpp~  surface_gourandtex.cpp  surface_gourandtex.cpp~  surface_lambert.cpp  surface_lambert.cpp~  surface_lamberttex.cpp  surface_lamberttex.cpp~  surface_light.cpp  surface_light.cpp~  surface_mirror.cpp  vertex_fixed.cpp  vertex_fixed.cpp~
(+22 files in other folders)
